# vibe_coding_test1

./: .gitignore  .pre-commit-config.yaml  CONVERSATION_SUMMARY.md  Makefile  README.md  ROADMAP.md  codecov.yml  pyproject.toml
.github/: copilot-instructions.md  python.instructions.md
.github/ISSUE_TEMPLATE/: feature_request.md
.github/skills/conventional-commits/: SKILL.md
.github/skills/create-github-issue/: SKILL.md
.github/skills/create_github_issue/: SKILL.md
.github/skills/playwright-cli/: package-lock.json
.github/workflows/: ci.yml
backend/: .gitignore  README.md  generate_requirements.py  pyproject.toml  requirements.txt
backend/app/: main.py  schemas.py
backend/app/database/: __init__.py  database.py
backend/app/items/: __init__.py
backend/app/items/application/dtos/: __init__.py  item_dto.py
backend/app/items/application/use_cases/: item_use_cases.py
backend/app/items/domain/entities/: item.py
backend/app/items/domain/interfaces/: __init__.py  item_repository.py
backend/app/items/infrastructure/api/: __init__.py  item_router.py
backend/app/items/infrastructure/database/: __init__.py  item_repository_impl.py
backend/app/items/infrastructure/orm/: __init__.py  item_orm.py
backend/app/models/: item.py
backend/app/routers/: __init__.py  items.py
backend/app/shared/: __init__.py
backend/app/shared/domain/: __init__.py
backend/app/shared/infrastructure/: __init__.py
backend/app/shared/infrastructure/database/: __init__.py  database.py
backend/app/tags/application/dtos/: tag_dto.py
backend/app/tags/application/use_cases/: tag_use_cases.py
backend/app/tags/domain/entities/: tag.py
backend/app/tags/domain/interfaces/: tag_repository.py
backend/app/tags/infrastructure/api/: tag_router.py
backend/app/tags/infrastructure/database/: tag_repository_impl.py
backend/app/tags/infrastructure/orm/: tag_orm.py
backend/libraries/: requirements-dev.txt  requirements.txt
backend/tests/integration/: __init__.py  conftest.py
backend/tests/integration/items/: __init__.py
backend/tests/integration/items/infrastructure/: __init__.py
backend/tests/integration/items/infrastructure/database/: __init__.py  test_item_repository_impl.py
backend/tests/items/application/: fixtures.py
backend/tests/items/application/use_cases/: test_item_use_cases.py
backend/tests/items/infrastructure/api/: test_item_router.py
backend/tests/tags/application/: fixtures.py
backend/tests/tags/application/use_cases/: test_tag_use_cases.py
backend/tests/tags/infrastructure/api/: test_tag_router.py
docs/: ISSUE_TEMPLATE.md
frontend/: .gitignore  README.md  eslint.config.js  package-lock.json  package.json  playwright.config.js  tailwind.config.js  tsconfig.json  vite.config.js
frontend/src/: App.jsx  App.test.jsx  App.test.tsx  App.tsx  index.css  types.ts
frontend/src/components/: Board.tsx  Column.tsx  ItemDetailDialog.test.jsx  Modal.test.jsx  Tag.jsx  Tag.test.jsx  Tag.tsx  TagSelector.jsx  TagSelector.test.jsx  TagSelector.test.tsx  TagSelector.tsx  TaskCard.test.tsx  TaskCard.tsx  TaskForm.tsx
frontend/src/test/: test-utils.tsx
frontend/tests/: README.md
frontend/tests/e2e/: basic-task-creation.spec.js  example.spec.js  items.spec.js  tags.spec.js  task-editing.spec.js  workflows.spec.js
frontend/tests/integration/: api-integration.spec.js  component-integration.spec.js
