[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "vibe-coding-test"
version = "1.0.0"

[tool.ruff]
# Ruff configuration for the project
line-length = 100
target-version = "py313"

[tool.ruff.lint]
# Enable specific rules
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E203",   # Whitespace before ':'
    "B008",   # FastAPI Depends() in defaults is intentional
]

[tool.ruff.lint.isort]
# Import sorting - compatible with Black
combine-as-imports = true
force-single-line = false
