[tool.poetry]
name = "vibe-coding-test-backend"
version = "1.0.0"
description = "FastAPI backend with SQLAlchemy and SQLite"
authors = ["Vibe Coding Team"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
fastapi = "0.115.5"
uvicorn = {extras = ["standard"], version = "0.34.0"}
sqlalchemy = "2.0.36"
python-dotenv = "1.0.1"
pydantic = "2.10.3"
pydantic-settings = "2.6.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "3.6.2"
ruff = "0.1.11"
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Ruff configuration for the project
line-length = 100
target-version = "py313"

[tool.ruff.lint]
# Enable specific rules
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E203",   # Whitespace before ':'
    "B008",   # FastAPI Depends() in defaults is intentional
]

[tool.ruff.lint.isort]
# Import sorting - compatible with Black
combine-as-imports = true
force-single-line = false
