[project]
name = "vibe-coding-test-backend"
version = "1.0.0"
description = "FastAPI backend with SQLAlchemy and SQLite"
authors = [{name = "victorperezpiqueras", email = "victorperezpiqueras@gmail.com"}]
readme = "README.md"
packages = [{include = "app"}]
requires-python = ">=3.13,<4.0.0"
dynamic = ["dependencies"]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13,<4.0.0"
fastapi = ">=0.128.7"
uvicorn = {extras = ["standard"], version = "0.34.0"}
sqlalchemy = "2.0.36"
python-dotenv = "1.0.1"
pydantic = "2.10.3"
pydantic-settings = "2.6.1"
starlette = ">=0.52.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "4.5.1"
ruff = "0.15.0"
pytest = "9.0.2"
pytest-asyncio = "^1.3.0"
pytest-mock = "^3.15.1"
httpx = "^0.28.0"
pytest-cov = "^6.0.0"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Ruff configuration for the project
line-length = 100
target-version = "py313"

[tool.ruff.lint]
# Enable specific rules
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E203",   # Whitespace before ':'
    "B008",   # FastAPI Depends() in defaults is intentional
]

[tool.ruff.lint.isort]
# Import sorting - compatible with Black
combine-as-imports = true
force-single-line = false

[tool.pytest.ini_options]
# Pytest configuration
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "asyncio: mark test as an async test",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.coverage.html]
# Output directory for HTML coverage reports
directory = "htmlcov"
